//
//  AuthView.swift
//  GBShop_KS
//
//  Created by Константин Шмондрик on 20.07.2022.
//

import UIKit
import FirebaseCrashlytics

protocol AuthViewProtocol: AnyObject {
    func tapLoginButton(userName: String, password: String)
    func tapRegistButton()
    
}

class AuthView: UIView {
    
    // MARK: - Subviews
    private(set) lazy var scrollView: UIScrollView = {
        let scrollView = UIScrollView(frame: .zero)
        scrollView.contentSize = CGSize(width: UIScreen.main.bounds.width, height: 2000)
        scrollView.translatesAutoresizingMaskIntoConstraints = false
        scrollView.isPagingEnabled = false
        
        
        return scrollView
    }()
    
    private(set) lazy var loginTexField: UITextField = {
        let textField = UITextField()
        textField.borderStyle = .bezel
        textField.attributedPlaceholder = NSAttributedString(string: "Логин", attributes: [NSAttributedString.Key.foregroundColor: UIColor.lightGray])
        textField.textColor = .black
        textField.autocapitalizationType = .none
        textField.translatesAutoresizingMaskIntoConstraints = false
        
        return textField
    }()
    
    private(set) lazy var passwordTexField: UITextField = {
        let textField = UITextField()
        textField.textColor = .black
        textField.attributedPlaceholder = NSAttributedString(string: "Пароль", attributes: [NSAttributedString.Key.foregroundColor: UIColor.lightGray])
        textField.borderStyle = .bezel
        textField.autocapitalizationType = .none
        textField.translatesAutoresizingMaskIntoConstraints = false
        
        return textField
    }()
    
    private(set) lazy var loginButton: UIButton = {
        let button = UIButton(type: .system)
        button.backgroundColor = .blue
        button.tintColor = .white
        button.setTitle("Войти", for: .normal)
        button.clipsToBounds = true
        button.layer.cornerRadius = 16.0
        button.addTarget(self, action: #selector(loginButtonPressed), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        
        return button
    }()
    
    private(set) lazy var registButton: UIButton = {
        let button = UIButton(type: .system)
        button.backgroundColor = .blue
        button.tintColor = .white
        button.layer.cornerRadius = 16.0
        button.setTitle("Регистрация", for: .normal)
        button.addTarget(self, action: #selector(registButtonPressed), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        
        return button
    }()
    
    private(set) lazy var helpLabel: UILabel = {
        let label = UILabel()
        label.text = "Для входа используйте логин: Somebody  пароль: mypassword"
        label.numberOfLines = 0
        label.textColor = .lightGray
        label.font = UIFont.systemFont(ofSize: 14.0)
        label.textAlignment = .left
        label.translatesAutoresizingMaskIntoConstraints = false
        
        return label
    }()
    
    // MARK: - Properties
    weak var delegate: AuthViewProtocol?
    
    // MARK: - Init
    
    override init(frame: CGRect) {
        super.init(frame: frame)
        self.configureUI()
        self.setupControls()
        self.registerNotifications()
        self.hideKeyboardGesture()
        self.setupAccessibily()
    }
    
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    // MARK: - UI
    
    private func configureUI() {
        self.backgroundColor = .white
        self.addSubview(self.scrollView)
        self.scrollView.addSubview(self.loginTexField)
        self.scrollView.addSubview(self.passwordTexField)
        self.scrollView.addSubview(self.loginButton)
        self.scrollView.addSubview(self.registButton)
        self.scrollView.addSubview(self.helpLabel)
        
        NSLayoutConstraint.activate([
            
            self.scrollView.topAnchor.constraint(equalTo: self.safeAreaLayoutGuide.topAnchor, constant: 0.0),
            self.scrollView.leftAnchor.constraint(equalTo: self.safeAreaLayoutGuide.leftAnchor,constant: 0.0),
            self.scrollView.rightAnchor.constraint(equalTo: self.safeAreaLayoutGuide.rightAnchor,constant: 0.0),
            self.scrollView.bottomAnchor.constraint(equalTo: self.safeAreaLayoutGuide.bottomAnchor,constant: 0.0),
            
            self.loginTexField.topAnchor.constraint(lessThanOrEqualTo: self.scrollView.topAnchor, constant: 50),
            self.loginTexField.heightAnchor.constraint(equalToConstant: 50.0),
            self.loginTexField.widthAnchor.constraint(equalToConstant: 350.0),
            self.loginTexField.centerXAnchor.constraint(equalTo: self.scrollView.centerXAnchor),
            
            self.passwordTexField.topAnchor.constraint(equalTo: self.loginTexField.bottomAnchor, constant: 20.0),
            self.passwordTexField.heightAnchor.constraint(equalToConstant: 50.0),
            self.passwordTexField.widthAnchor.constraint(equalToConstant: 350.0),
            self.passwordTexField.centerXAnchor.constraint(equalTo: self.scrollView.centerXAnchor),
            
            self.loginButton.topAnchor.constraint(equalTo: self.passwordTexField.bottomAnchor, constant: 30.0),
            self.loginButton.heightAnchor.constraint(equalToConstant: 50.0),
            self.loginButton.widthAnchor.constraint(equalToConstant: 250.0),
            self.loginButton.centerXAnchor.constraint(equalTo: self.scrollView.centerXAnchor),
            
            self.registButton.topAnchor.constraint(equalTo: self.loginButton.bottomAnchor, constant: 20.0),
            self.registButton.heightAnchor.constraint(equalToConstant: 50.0),
            self.registButton.widthAnchor.constraint(equalToConstant: 250.0),
            self.registButton.centerXAnchor.constraint(equalTo: self.scrollView.centerXAnchor),
            //            self.registButton.bottomAnchor.constraint(greaterThanOrEqualTo: self.scrollView.bottomAnchor, constant: 0.0)
            
            self.helpLabel.topAnchor.constraint(equalTo: self.registButton.bottomAnchor, constant: 50.0),
            self.helpLabel.heightAnchor.constraint(equalToConstant: 250.0),
            self.helpLabel.widthAnchor.constraint(equalToConstant: 350.0),
            self.helpLabel.centerXAnchor.constraint(equalTo: self.scrollView.centerXAnchor),
        ])
    }
    
    // MARK: - private func
    
    private func setupControls() {
        loginButton.backgroundColor = UIColor.opaqueSeparator
        loginButton.isEnabled = false
        
        [loginTexField, passwordTexField].forEach {
            $0.addTarget(self, action: #selector(editingChanged), for: .editingChanged)
        }
    }
    
    private func isFormFilled() -> Bool {
        guard loginTexField.text != "",
              passwordTexField.text != "" else {
            return false
        }
        return true
    }
    
    private func registerNotifications() {
        NotificationCenter.default.addObserver(self,
                                               selector: #selector(keyboardWillShow),
                                               name: UIResponder.keyboardWillShowNotification,
                                               object: nil)
        
        NotificationCenter.default.addObserver(self,
                                               selector: #selector(keyboardWillHide),
                                               name: UIResponder.keyboardWillHideNotification,
                                               object: nil)
    }
    
    private func hideKeyboardGesture() {
        let hideKeyboardGesture = UITapGestureRecognizer(target: self, action: #selector(hideKeyboard))
        
        scrollView.addGestureRecognizer(hideKeyboardGesture)
    }
    
    private func setupAccessibily() {
        
        self.accessibilityIdentifier = "loginView"
        self.loginTexField.accessibilityIdentifier = "loginTexField"
        self.passwordTexField.accessibilityIdentifier = "passwordTexField"
        self.loginButton.accessibilityIdentifier = "loginButton"
        self.registButton.accessibilityIdentifier = "registButton"
    }
    // MARK: - Actions
    
    @objc private func loginButtonPressed() {
        let userName = loginTexField.text ?? ""
        let password = passwordTexField.text ?? ""
        delegate?.tapLoginButton(userName: userName, password: password)
        loginTexField.text = ""
        passwordTexField.text = ""
        
    }
    
    @objc private func registButtonPressed() {
        delegate?.tapRegistButton()
    }
    
    @objc func keyboardWillShow(notification: NSNotification) {
        guard let userInfo = notification.userInfo else { Crashlytics.crashlytics().log("userInfo is nill")
            return
        }
        
        var keyboardFrame: CGRect = (userInfo[UIResponder.keyboardFrameBeginUserInfoKey] as! NSValue).cgRectValue
        var contentInset: UIEdgeInsets = self.scrollView.contentInset
        
        keyboardFrame = self.scrollView.convert(keyboardFrame, from: nil)
        
        contentInset.bottom = keyboardFrame.size.height + 50
        scrollView.contentInset = contentInset
    }
    
    @objc func keyboardWillHide(notification: NSNotification) {
        let contentInset: UIEdgeInsets = UIEdgeInsets.zero
        scrollView.contentInset = contentInset
    }
    
    @objc func hideKeyboard() {
        self.scrollView.endEditing(true)
    }
    
    @objc func editingChanged(_ textField: UITextField) {
        guard isFormFilled() else {
            loginButton.backgroundColor = UIColor.opaqueSeparator
            loginButton.isEnabled = false
            return
        }
        loginButton.backgroundColor = .blue
        loginButton.isEnabled = true
    }
}
